<resources>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="fill_details">Please fill in your details</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_contact">Enter Contact</string>
    <string name="enter_address">Enter Address</string>
    <string name="save_changes">Save Changes</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="back_button_description">Go Back</string>
    <string name="app_name">Personal Profile Page</string>
</resources>
