<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back_button_description"
        android:padding="4dp"
        android:src="@drawable/gradient_back_arrow_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="322dp"
        android:layout_height="62dp"
        android:layout_marginTop="8dp"
        android:text="@string/edit_profile"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButton" />

    <EditText
        android:id="@+id/etContact"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:autofillHints="phone"
        android:background="@drawable/edit_text_border"
        android:hint="@string/enter_contact"
        android:inputType="phone"
        android:textColor="@android:color/black"
        android:textColorHint="#757575"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="@id/etName"
        app:layout_constraintStart_toStartOf="@id/etName"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />

    <Button
        android:id="@+id/changePasswordButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#555555"
        android:text="@string/change_password"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@id/saveButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/saveButton"
        app:layout_constraintTop_toBottomOf="@id/saveButton" />

    <Button
        android:id="@+id/deleteAccountButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/delete_account"
        android:textColor="#CC0000"
        app:layout_constraintEnd_toEndOf="@id/saveButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/saveButton"
        app:layout_constraintTop_toBottomOf="@id/changePasswordButton" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:backgroundTint="#0066CC"
        android:text="@string/save_changes"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@id/etName"
        app:layout_constraintStart_toStartOf="@id/etName"
        app:layout_constraintTop_toBottomOf="@id/etAddress" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edit_text_border"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black"
        android:textColorHint="#757575"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="@id/etName"
        app:layout_constraintStart_toStartOf="@id/etName"
        app:layout_constraintTop_toBottomOf="@id/etName" />

    <TextView
        android:id="@+id/subtitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/fill_details"
        android:textColor="#666666"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:autofillHints="postalAddress"
        android:background="@drawable/edit_text_border"
        android:hint="@string/enter_address"
        android:inputType="textPostalAddress"
        android:textColor="@android:color/black"
        android:textColorHint="#757575"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="@id/etName"
        app:layout_constraintStart_toStartOf="@id/etName"
        app:layout_constraintTop_toBottomOf="@id/etContact" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:autofillHints="name"
        android:textColor="@android:color/black"
        android:textColorHint="#757575"
        android:background="@drawable/edit_text_border"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitleTextView"
        app:layout_constraintWidth_percent="0.9" />

    <TextView
        android:id="@+id/tvFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/deleteAccountButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
